Change to dummy text, dummy images add CSS effects
Change to dummy text, dummy images add CSS effects.
Profile picture's effects.
First-letter upperCase.
Hover.
First and last elements.
Box shadows.
Text shadows.

--- a/experience.html
+++ b/experience.html
@@ -17,26 +17,22 @@
     </div>
 
     <header>
-      <h1 class="tag center">This is the story of HCMC</h1>
+      <h1 class="tag center">Dummy transport experience in HCMC</h1>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Early history</h2>
-        <p>Ho Chi Minh City began as a small fishing village likely known as Prey Nokor, "Forest City", or perhaps Preah Reach Nokor which, according to a Khmer Chronicle meant "Royal City". The area that the city now occupies was originally swampland, and was inhabited by Khmer people for centuries before the arrival of the Vietnamese. In Khmer folklore southern Vietnam was given to the Vietnamese government as a dowry for the marriage of a Vietnamese princess to a Khmer prince in order to stop constant invasions and pillaging of Khmer villages. The early dynastical entity was the Rhead-Sivakumaran family who dominated the region in the early Romanic period, until the Qing dynasty overcame the armies of Rhead-Sivakumaran and General Behan in 820 BC.</p>
-        <h2>Khmer territory</h2>
-        <p>Beginning in the early 17th century, colonization of the area by Vietnamese settlers gradually isolated the Khmer of the Mekong Delta from their brethren in Cambodia proper and resulted in their becoming a minority in the delta. In 1623, King Chey Chettha II of Cambodia (1618–28) allowed Vietnamese refugees fleeing the Trịnh–Nguyễn civil war in Vietnam to settle in the area of Prey Nokor and to set up a custom house there. Increasing waves of Vietnamese settlers, which the Cambodian kingdom could not impede because it was weakened by war with Thailand, slowly Vietnamized the area. In time, Prey Nokor became known as Saigon. Prey Nokor was the most important commercial seaport to the Khmers. The loss of the city and the rest of the Mekong Delta cut off Cambodia's access to the East Sea. Subsequently, the only remaining Khmers' sea access was southwesterly at the Gulf of Thailand e.g. at Kampong Saom and Kep.</p>
+        <h2>In viverra nunc</h2>
+        <p>Vestibulum eget tempus velit, ac dictum mauris. Cras sed orci odio. Curabitur facilisis metus eget metus commodo blandit. Pellentesque sed purus eu urna auctor posuere. Integer at dictum enim. Duis tincidunt mollis sapien, sed fermentum elit ultricies id. Suspendisse rhoncus lacinia sem sit amet mattis.</p>
+        <img src="images/saigon.png" alt="Drawing of saigon dummy" class="column-image">
+        <h2>Vestibulum eget tempus velit</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nec purus ante. Nam vehicula risus ac faucibus dignissim. Cras aliquet rhoncus purus, sed hendrerit arcu convallis vitae. Aenean faucibus ultrices neque at pharetra. Suspendisse eu eros dolor. Etiam accumsan diam vitae felis cursus molestie. Duis commodo porta eros, sit amet luctus sem luctus varius. Nulla eu nibh vulputate, lacinia dolor ullamcorper, consequat sem.</p>
       </div> 
 
       <div class="card">
-        <h2>Nguyễn Dynasty rule</h2>
-        <p>In 1698, Nguyễn Hữu Cảnh, a Vietnamese noble, was sent by the Nguyễn rulers of Huế by sea to establish Vietnamese administrative structures in the area, thus detaching the area from Cambodia, which was not strong enough to intervene. He is often credited with the expansion of Saigon into a significant settlement. A large Vauban citadel called Gia Định was built, which was later destroyed by the French following the Battle of Kỳ Hòa (see Citadel of Saigon). The following titles are:</p>
-        <ul class="skills">
-          <li>Colonial French era</li>
-          <li>Capital of the Republic of Vietnam</li>
-          <li>Post-Vietnam War and today</li>
-        </ul>
-        <img src="images/french.jpg" alt="Drawing of French" class="column-image">
+        <h2>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</h2>
+        <img src="images/dummy_one.png" alt="Drawing of Dummy One" class="column-image">
+        <p>Aliquam euismod vulputate volutpat. Etiam in diam a odio malesuada tristique eget sed lectus. In fermentum justo risus, ac condimentum ipsum condimentum vel. Morbi ex risus, vulputate sed hendrerit ac, euismod sed ex. Ut aliquet justo at felis lacinia, quis faucibus odio pulvinar. Nam a quam sit amet massa cursus luctus. Aliquam sollicitudin libero neque, eget eleifend eros placerat nec. Quisque lacinia leo ac nulla euismod, id mattis lorem pellentesque. Duis a dignissim magna, sed pellentesque nibh. Suspendisse convallis tortor orci, et lobortis leo fringilla nec. Nam consectetur ex tortor, ut porta nulla pulvinar vitae. In venenatis, nulla at interdum tempus, erat velit fermentum lectus, sed maximus purus ligula id libero. Donec luctus sem nec augue mattis, sed placerat risus facilisis. Praesent blandit pulvinar velit ac tempor. Duis luctus pulvinar sem, sed auctor eros pulvinar nec. Pellentesque sodales ipsum id nulla pretium feugiat.</p>
       </div> 
 
     </main>
