--- a/home.html
+++ b/home.html
@@ -17,26 +17,29 @@
     </div>
 
     <header>
-      <h1 class="tag center">This is the story of HCMC</h1>
+      <h1 class="tag center">Some dummy stories here in HCMC</h1>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Early history</h2>
-        <p>Ho Chi Minh City began as a small fishing village likely known as Prey Nokor, "Forest City", or perhaps Preah Reach Nokor which, according to a Khmer Chronicle meant "Royal City". The area that the city now occupies was originally swampland, and was inhabited by Khmer people for centuries before the arrival of the Vietnamese. In Khmer folklore southern Vietnam was given to the Vietnamese government as a dowry for the marriage of a Vietnamese princess to a Khmer prince in order to stop constant invasions and pillaging of Khmer villages. The early dynastical entity was the Rhead-Sivakumaran family who dominated the region in the early Romanic period, until the Qing dynasty overcame the armies of Rhead-Sivakumaran and General Behan in 820 BC.</p>
-        <h2>Khmer territory</h2>
-        <p>Beginning in the early 17th century, colonization of the area by Vietnamese settlers gradually isolated the Khmer of the Mekong Delta from their brethren in Cambodia proper and resulted in their becoming a minority in the delta. In 1623, King Chey Chettha II of Cambodia (1618–28) allowed Vietnamese refugees fleeing the Trịnh–Nguyễn civil war in Vietnam to settle in the area of Prey Nokor and to set up a custom house there. Increasing waves of Vietnamese settlers, which the Cambodian kingdom could not impede because it was weakened by war with Thailand, slowly Vietnamized the area. In time, Prey Nokor became known as Saigon. Prey Nokor was the most important commercial seaport to the Khmers. The loss of the city and the rest of the Mekong Delta cut off Cambodia's access to the East Sea. Subsequently, the only remaining Khmers' sea access was southwesterly at the Gulf of Thailand e.g. at Kampong Saom and Kep.</p>
+        <h2>Lorem ipsum</h2>
+        <h3>Ut tristique dui pulvinar vel</h3>
+        <p>Donec non diam tincidunt, aliquet eros a, dictum turpis. Nulla aliquam egestas odio, non cursus lacus ullamcorper ornare. Curabitur ex turpis, semper nec efficitur sed, sagittis in enim. Duis sodales posuere elit, et lacinia ex mollis ac. Suspendisse volutpat gravida sem, ut tristique dui pulvinar vel. Quisque ac fringilla diam. Ut commodo, odio ac eleifend malesuada, sem quam ornare mauris, sit amet commodo diam diam sit amet dui. Quisque dolor velit, ultrices quis suscipit eget, fermentum a turpis.</p>
+        <div class="dum-back"><p>Phasellus non dui sit amet erat vulputate semper quis a felis. Ut rutrum purus vel mi gravida, ac ultricies urna facilisis. Integer eget tincidunt libero.</p></div>
+        <h2>Condimentum molestie</h2>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus quam quam, pulvinar ut orci ut, efficitur euismod sem. Vestibulum sollicitudin egestas fringilla. Nulla dictum ligula a nisl venenatis, quis tincidunt elit posuere. Vivamus sit amet nibh quis ex rutrum placerat quis nec diam. Morbi nec mattis neque. Curabitur in aliquet nulla, pretium consectetur nibh. Maecenas scelerisque arcu imperdiet urna hendrerit, id aliquam eros porta. Mauris molestie, neque a rutrum sagittis, urna est ullamcorper tortor, id semper orci lacus vitae justo.</p>
+        <img src="images/Locasaigon.png" alt="Loca of HCMC" class="column-image">
       </div> 
 
       <div class="card">
-        <h2>Nguyễn Dynasty rule</h2>
-        <p>In 1698, Nguyễn Hữu Cảnh, a Vietnamese noble, was sent by the Nguyễn rulers of Huế by sea to establish Vietnamese administrative structures in the area, thus detaching the area from Cambodia, which was not strong enough to intervene. He is often credited with the expansion of Saigon into a significant settlement. A large Vauban citadel called Gia Định was built, which was later destroyed by the French following the Battle of Kỳ Hòa (see Citadel of Saigon). The following titles are:</p>
+        <h2>Dmmyu sotry</h2>
+        <p>Aliquam vel eros id lorem sagittis feugiat nec sit amet libero. Integer aliquam enim neque, et blandit est eleifend ut. Suspendisse molestie gravida dignissim. Integer felis purus, gravida at ultrices in, ullamcorper ut neque. Morbi sed lobortis ante.</p>
         <ul class="skills">
-          <li>Colonial French era</li>
-          <li>Capital of the Republic of Vietnam</li>
-          <li>Post-Vietnam War and today</li>
+          <li>Etiam</li>
+          <li>Faucibus</li>
+          <li>Ietnam ar</li>
         </ul>
-        <img src="images/french.jpg" alt="Drawing of French" class="column-image">
+        <img src="images/blandit.png" alt="Drawing of Blandit" class="column-image">
       </div> 
 
     </main>
