--- a/experience.html
+++ b/experience.html
@@ -13,6 +13,7 @@
         	<li class="name">Experience</li>
         	<li><a href="index.html">Van Tran</a></li>
         	<li><a href="home.html">Home</a></li>
+          <li><a href="lorem.html">Lorem</a></li>
         </ul>
     </div>
 
