--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         	<li class="name">Home</li>
         	<li><a href="index.html">Van Tran</a></li>
         	<li><a href="experience.html">Experience</a></li>
+        	<li><a href="lorem.html">Lorem</a></li>
         </ul>
     </div>
 
