--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <li class="name">Van Tran</li>
           <li><a href="home.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="lorem.html">Lorem</a></li>
         </ul>
     </div>
 
