--- a/index.html
+++ b/index.html
@@ -19,31 +19,60 @@
 
     <header>
       <img src="images/van.jpg" alt="Drawing of Van Tran" class="profile-image">
-      <h1 class="tag name">Xin chào, I'm Van.</h1>
-      <p class="tag location">I'm from HCMC, Vietnam</p>
+      <h1 class="tag name">Hello, I'm Tran Huu Van</h1>
+      <p class="tag location">From Ho Chi Minh, Vietnam</p>
     </header>
 
-    <main class="flex">
-      <div class="card">
-        <h2>Football</h2>
-        <p>I'm a big fan of Liverpool FC which is one of the most successful football clubs in the world. Because Kloop has just taken the coach position, we are hoping that the club would take their glory again.</p>
-        <h2>Front End Developer</h2>
-        <p>And obviously, I'm really interisted in Web coding and currently focusing on being a Front End Developer. Hopefully, the course of Techdegree would enhance my Front End skills as JavaScript, HTML, CSS and so on.</p>
-      </div> 
+    <main>
 
-      <div class="card">
-        <h2>Goals</h2>
-        <p>My target is to become an great front end developer, so I'm trying to master the skills of:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>JQuery</li>
-          <li>AJAX</li>
+    <div class="flex">
+
+        <div class="card">
+            <legend><span class="number">1</span>Experience</legend>
+
+            <time>02/2016 - Present</time>
+            <label>Front End Web Development</label>
+            <p>Techdegree Program - TreeHouse</p>
+                <ul>
+                    <li>Complete the course of 12 months focusing on very basic Front End skills such as HTML, CSS, Javascript</li>
+                    <li>Exceed Expectations grades of 6 projects in the Techdegree program</li>
+                    <li>Using Slack application for communication between program students. Help other students correcting bugs, errors, and layouts. Orienting, advising and reviewing the projects before submitting to teachers</li>
+                    <li>Face-to-face meetings with Treehouse teachers using Zoom 2 times per month</li>
+                </ul>
+
+            <time>05/2015 - Present</time>
+            <label>Studying at Treehouse</label>
+            <p>http://teamtreehouse.com</p>
+                <p>Intermediate level (12,628 pts) focusing on Front End skills as Javascript(3,889 pts), CSS(3,847 pts), HTML(1,363pts) and also Wordpress, PHP, mySQL</p>
+        </div>
+
+        <div class="card">
+            <legend><span class="number">2</span>Education</legend>
+
+            <time>2014 - 2015</time>
+            <label>Master degree - Controls, Systems & Information Technology</label>
+            <p>Grenoble Alpes University - Joshep Fourier University</p>
+
+            <time>2007 - 2012</time>
+            <label>Engineering degree - Telecommunication</label>
+            <p>Ho Chi Minh city University of Technology - PFIEV program for excellent engineers</p>
+
+            <legend><span class="number">3</span>Frontend & Backend skills</legend>     
+        </div>
+
+    </div>
+
+    <div class="card center">
+        <legend><span class="number">4</span>Handy Projects</legend>
+        <ul class="projects">
+            <li><a href="http://sportore.net">E-commerce Wordpress</a></li>
+            <li><a href="http://huuvan20.github.io/responsive_layout/">Responsive Layout</a></li>
+            <li><a href="http://huuvan20.github.io/Online-Registration/">Online Registration Form</a></li>
+            <li><a href="http://huuvan20.github.io/photo_gallery/">Interactive Photo Gallery</a></li>
+            <li><a href="http://huuvan20.github.io/css_to_sass/">CSS to Sass</a></li>
+            <li><a href="http://huuvan20.github.io/svg_site_update/">SVG Site Update</a></li>
         </ul>
-        <p>I'm looking for a job in Web Design Industry and afterward becoming a great freelancer!</p>
-        <p>Please check links below for contacting me. Nice to see you!</p>
-      </div> 
+    </div>
 
     </main>
     <footer>
