Updating profile and styles

--- a/index.html
+++ b/index.html
@@ -5,83 +5,99 @@
   <title>Van Tran's page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+<link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+<body>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Van Tran</li>
-          <li><a href="home.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="lorem.html">Lorem</a></li>
-        </ul>
-    </div>
-
-    <header>
-      <img src="images/van.jpg" alt="Drawing of Van Tran" class="profile-image">
-      <h1 class="tag name">Hello, I'm Tran Huu Van</h1>
-      <p class="tag location">From Ho Chi Minh, Vietnam</p>
-    </header>
-
-    <main>
-
-    <div class="flex">
-
-        <div class="card">
-            <legend><span class="number">1</span>Experience</legend>
-
-            <time>02/2016 - Present</time>
-            <label>Front End Web Development</label>
-            <p>Techdegree Program - TreeHouse</p>
-                <ul>
-                    <li>Complete the course of 12 months focusing on very basic Front End skills such as HTML, CSS, Javascript</li>
-                    <li>Exceed Expectations grades of 6 projects in the Techdegree program</li>
-                    <li>Using Slack application for communication between program students. Help other students correcting bugs, errors, and layouts. Orienting, advising and reviewing the projects before submitting to teachers</li>
-                    <li>Face-to-face meetings with Treehouse teachers using Zoom 2 times per month</li>
-                </ul>
-
-            <time>05/2015 - Present</time>
-            <label>Studying at Treehouse</label>
-            <p>http://teamtreehouse.com</p>
-                <p>Intermediate level (12,628 pts) focusing on Front End skills as Javascript(3,889 pts), CSS(3,847 pts), HTML(1,363pts) and also Wordpress, PHP, mySQL</p>
-        </div>
-
-        <div class="card">
-            <legend><span class="number">2</span>Education</legend>
-
-            <time>2014 - 2015</time>
-            <label>Master degree - Controls, Systems & Information Technology</label>
-            <p>Grenoble Alpes University - Joshep Fourier University</p>
-
-            <time>2007 - 2012</time>
-            <label>Engineering degree - Telecommunication</label>
-            <p>Ho Chi Minh city University of Technology - PFIEV program for excellent engineers</p>
-
-            <legend><span class="number">3</span>Frontend & Backend skills</legend>     
-        </div>
-
-    </div>
-
-    <div class="card center">
-        <legend><span class="number">4</span>Handy Projects</legend>
-        <ul class="projects">
-            <li><a href="http://sportore.net">E-commerce Wordpress</a></li>
-            <li><a href="http://huuvan20.github.io/responsive_layout/">Responsive Layout</a></li>
-            <li><a href="http://huuvan20.github.io/Online-Registration/">Online Registration Form</a></li>
-            <li><a href="http://huuvan20.github.io/photo_gallery/">Interactive Photo Gallery</a></li>
-            <li><a href="http://huuvan20.github.io/css_to_sass/">CSS to Sass</a></li>
-            <li><a href="http://huuvan20.github.io/svg_site_update/">SVG Site Update</a></li>
-        </ul>
-    </div>
-
-    </main>
-    <footer>
-      <ul>
-        <li><a href="https://twitter.com/HuuVanTran" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/in/tran-huu-van-4b78a277?trk=hp-identity-name" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/huuvan20" class="social github">Github</a></li>
+  <div class="main-nav">
+      <ul class="nav">
+        <li><a class="nav-a name" href="#">Home</a></li>
+        <li><a class="nav-a" href="#sec_experience">Experience</a></li>
+        <li><a class="nav-a" href="#sec_education">Education</a></li>
+        <li><a class="nav-a" href="#sec_skills">Skills</a></li>
+        <li><a class="nav-a" href="#sec_projects">Projects</a></li>
       </ul>
-      <p class="copyright">Copyright 2016, Van Tran</p>
-    </footer>
-  </body>
-  </html>
+  </div>
+
+  <header>
+    <img src="images/van.jpg" alt="Drawing of Van Tran" class="profile-image">
+    <h1 class="tag name">Hello, I'm Tran Huu Van</h1>
+    <p class="tag location">From Ho Chi Minh, Vietnam</p>
+  </header>
+
+  <main>
+
+  <div class="flex">
+
+      <div class="card">
+          <legend><a name="sec_experience" class="number">1</a>Experience</legend>
+          <time>02/2016 - Present</time>
+          <label>Front End Web Development <a target="_blank" href="https://teamtreehouse.com/techdegree/front-end-web-development" class="link_there">link there</a></label>
+          <p>Techdegree Program - TreeHouse</p>
+              <ul>
+                <li>An advanced program of 24 courses, 12 real-world projects to build a strong technical foundation, focusing on in-demand Front End skills of HTML, CSS, Javascript, Development Tools.</li>
+                <li>Currently working on the project 7 over 12 challenging ones. Results: Exceed Expectations grades of 6 ones.</li>
+                <li>Accessing Slack community to interact with other students on solving problems. Helping other students correcting bugs, errors. Reviewing the projects for the others before being submitted to teachers.</li>
+              </ul>
+
+          <time>05/2015 - Present</time>
+          <label>Learning at Treehouse <a target="_blank" href="https://teamtreehouse.com/huuvantran" class="link_there">link there</a></label>
+          <p>http://teamtreehouse.com</p>
+              <p>Intermediate level (12,628 pts) focusing on Front End skills: Javascript(3,889 pts), CSS(3,847 pts), HTML(1,363pts) & also MySQL, PHP, Wordpress.</p>
+              <ul>
+                <li>GitHub Basics</li>
+                <li>DOM | Debugging HTML & CSS Problems</li>
+                <li>Float & Flexbox Layout | SMACSS & Sass-Refactoring-Modulars</li>
+                <li>Media Queries & Responsive Layout | SVG - Transitions & Transforms</li>
+                <li>Object-Oriented JavaScript - JQuery Basics & plugins</li> 
+                <li>MySQL, PHP, Wordpress Basics</li>
+              </ul>
+      </div>
+
+      <div class="card">
+          <legend><a name="sec_education" class="number">2</a>Education</legend>
+          <time>2014 - 2015</time>
+          <label>Master degree - Controls, Systems & Information Technology</label>
+          <p>Grenoble Alpes University - Joshep Fourier University</p>
+
+          <time>2007 - 2012</time>
+          <label>Engineering degree - Telecommunication</label>
+          <p>Ho Chi Minh city University of Technology - PFIEV program for excellent engineers</p>
+
+          <legend name="sec_skills"><a name="sec_skills" class="number">3</a>Frontend & Backend skills</legend>
+          <div class="skills">
+              <div class="pie" data-start="0" data-value="30"></div>
+              <div class="pie highlight" data-start="30" data-value="30"></div>
+              <div class="pie" data-start="60" data-value="40"></div>
+              <div class="pie big" data-start="100" data-value="260"></div>
+          </div>   
+      </div>
+
+  </div>
+
+  <div class="card center">
+      <legend name="sec_projects"><a name="sec_projects" class="number">4</a>Handy Projects</legend>
+      <ul class="projects">
+          <li><a href="http://sportore.net">E-commerce Wordpress</a></li>
+          <li><a href="http://huuvan20.github.io/responsive_layout/">Responsive Layout</a></li>
+          <li><a href="http://huuvan20.github.io/Online-Registration/">Online Registration Form</a></li>
+          <li><a href="http://huuvan20.github.io/photo_gallery/">Interactive Photo Gallery</a></li>
+          <li><a href="http://huuvan20.github.io/css_to_sass/">CSS to Sass</a></li>
+          <li><a href="http://huuvan20.github.io/svg_site_update/">SVG Site Update</a></li>
+      </ul>
+  </div>
+
+  </main>
+  <footer>
+    <ul>
+      <li><a href="https://twitter.com/HuuVanTran" class="social twitter">Twitter</a></li>
+      <li><a href="https://www.linkedin.com/in/tran-huu-van-4b78a277?trk=hp-identity-name" class="social linkedin">LinkedIn</a></li>
+      <li><a href="https://github.com/huuvan20" class="social github">Github</a></li>
+    </ul>
+    <p class="copyright">Copyright 2016, Van Tran</p>
+  </footer>
+
+<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="app.js" type="text/javascript" charset="utf-8"></script>
+
+</body>
+</html>
