update profile again

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
           <label>Front End Web Development <a target="_blank" href="https://teamtreehouse.com/techdegree/front-end-web-development" class="link_there">link there</a></label>
           <p>Techdegree Program - TreeHouse</p>
               <ul>
-                <li>An advanced program of 24 courses, 12 real-world projects to build a strong technical foundation, focusing on in-demand Front End skills of HTML, CSS, Javascript, Development Tools.</li>
-                <li>Currently working on the project 7 over 12 challenging ones. Results: Exceed Expectations grades of 6 ones.</li>
+                <li>An advanced program of 24 courses, 12 real-world projects to build a strong technical foundation, focusing on in-demand Front End skills of HTML, CSS, Javascript, Development Tools & more.</li>
+                <li>Currently working on the project 7 over 12 challenging ones. Results: Exceed Expectations grades of 6 projects.</li>
                 <li>Accessing Slack community to interact with other students on solving problems. Helping other students correcting bugs, errors. Reviewing the projects for the others before being submitted to teachers.</li>
               </ul>
 
           <time>05/2015 - Present</time>
           <label>Learning at Treehouse <a target="_blank" href="https://teamtreehouse.com/huuvantran" class="link_there">link there</a></label>
           <p>http://teamtreehouse.com</p>
-              <p>Intermediate level (12,628 pts) focusing on Front End skills: Javascript(3,889 pts), CSS(3,847 pts), HTML(1,363pts) & also MySQL, PHP, Wordpress.</p>
+              <p>Intermediate level (12,628 pts) focusing on Front End skills: Javascript(3,889 pts), CSS(3,847 pts), HTML(1,363 pts) & MySQL, PHP, Wordpress.</p>
               <ul>
                 <li>GitHub Basics</li>
                 <li>DOM | Debugging HTML & CSS Problems</li>
@@ -58,24 +58,35 @@
           <time>2014 - 2015</time>
           <label>Master degree - Controls, Systems & Information Technology</label>
           <p>Grenoble Alpes University - Joshep Fourier University</p>
+          <a target="_blank" href="images/master_degree.jpg"><img class="lb-img" src="images/master_degree.jpg" alt="Master degree of Controls, Systems and Information Technology"></a>
 
           <time>2007 - 2012</time>
-          <label>Engineering degree - Telecommunication</label>
+          <label>Engineering degree - Telecommunications</label>
           <p>Ho Chi Minh city University of Technology - PFIEV program for excellent engineers</p>
 
           <legend name="sec_skills"><a name="sec_skills" class="number">3</a>Frontend & Backend skills</legend>
           <div class="skills">
-              <div class="pie" data-start="0" data-value="30"></div>
-              <div class="pie highlight" data-start="30" data-value="30"></div>
-              <div class="pie" data-start="60" data-value="40"></div>
-              <div class="pie big" data-start="100" data-value="260"></div>
-          </div>   
+            <div class="pie" data-start="0" data-value="39"></div>
+            <div class="pie" data-start="39" data-value="109"></div>
+            <div class="pie" data-start="148" data-value="110"></div>
+            <div class="pie" data-start="258" data-value="30"></div>
+            <div class="pie" data-start="288" data-value="40"></div>
+            <div class="pie" data-start="328" data-value="32"></div>
+          </div>
+          <ul class="skills-labels">
+            <li><span class="labels label-HTML"></span>HTML</li>
+            <li><span class="labels label-CSS"></span>CSS</li>
+            <li><span class="labels label-Javascript"></span>Javascript</li>
+            <li><span class="labels label-MySQL"></span>MySQL</li>
+            <li><span class="labels label-PHP"></span>PHP</li>
+            <li><span class="labels label-Wordpress"></span>Wordpress</li>
+          </ul>
       </div>
 
   </div>
 
   <div class="card center">
-      <legend name="sec_projects"><a name="sec_projects" class="number">4</a>Handy Projects</legend>
+      <legend name="sec_projects"><a name="sec_projects" class="number">4</a>Real-world Projects</legend>
       <ul class="projects">
           <li><a href="http://sportore.net">E-commerce Wordpress</a></li>
           <li><a href="http://huuvan20.github.io/responsive_layout/">Responsive Layout</a></li>
